done upto the color part that is 5 : 50

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 
 DATABASE_URL="postgresql://postgres:ashu5348nautiyal@db.qzvdyvaxkwwlxsypayve.supabase.co:5432/postgres"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dqarxwjx4"
